k8s/app_javascript/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-javascript-service
spec:
  selector:
    app: javascript
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 3000
  type: LoadBalancer
